# TestTask

./: CMakeLists.txt
TestTask/: CMakeLists.txt
Test_Task/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
Test_Task/services/: app_manager.cpp  app_manager.h  archive_manager.cpp  archive_manager.h  archiver_pipeline.cpp  archiver_pipeline.h  data_controller.cpp  data_controller.h
Test_Task/terminal/: terminal_core.cpp  terminal_core.h
Test_Task/ui/: main_window.cpp
Test_Task/ui/models/: tab_item_model.cpp  tab_item_model.h  tree_item_model.cpp  tree_item_model.h
Test_Task/ui/widgets/: tree_view_field.cpp  tree_view_field.h
